samples/_failures_safe/1761659750_9332e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00619f0a.c: In function ‘main’:
./samples/SAFE/__tmp_00619f0a.c:152:9: error: expected declaration or statement at end of input
  152 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_00619f0a.c:152:9: error: expected declaration or statement at end of input
